---------------------------------------------------------------------

name:                      silvi
version:                   1.0.0
build-type:                Simple
cabal-version:             >= 1.10
category:                  Testing
author:                    Daniel Cartwright
maintainer:                dcartwright@layer3com.com
license:                   Apache-2.0
license-file:              LICENSE
homepage:                  https://github.com/chessai/silvi
bug-reports:               https://github.com/chessai/silvi/issues
synopsis:                  A generator for different kinds of logs.
description:               A Haskell library for generating logs
                           from user specifications.
extra-source-files:        README.md
tested-with:               GHC == 8.0.2
                         , GHC == 8.2.1

---------------------------------------------------------------------

source-repository head
    type:                git
    branch:              master
    location:            https://github.com/chessai/silvi.git

---------------------------------------------------------------------

library
    hs-source-dirs:        src
    build-depends:         attoparsec
                         , base       >= 4.8 && < 5.0
                         , chronos
                         , ip
                         , random-fu
                         , text
    exposed-modules:       Silvi
    default-language:      Haskell2010
    other-extensions:      DeriveDataTypeable
                         , DeriveFoldable
                         , DeriveFunctor
                         , DeriveGeneric
                         , DeriveTraversable
                         , GADTs
                         , KindSignatures
                         , LambdaCase
                         , OverloadedStrings
                         , ScopedTypeVariables
    --if impl(ghc >= 8.0)
    --   ghc-options:        -Wcompat -Weverything
    --                       -fno-warn-unsafe
    --                       -fno-warn-safe
    --                       -fno-warn-implicit-prelude
    --                       -fno-warn-unused-do-bind
    --                       -fno-warn-missed-specialisations
    --                       -fno-warn-all-missed-specialisations
    --                       -g
    -- else
    --   ghc-options:        -Wall -g

---------------------------------------------------------------------

